# dawieplusplus

./: CMakeLists.txt  Makefile  buildwin.bat  ear.mid
src/: main.cpp  midifuncs.cpp  midifuncs.h  tempCodeRunnerFile.c
